# combocounter

./: .gitignore  AUDIO_ACTION_CAM_SOLUTION.md  AUDIO_ACTION_RECORDER_STATUS.md  CMakeLists.txt  EMBEDDED_STATUS.md  NEXT_STEPS.md  PERSISTENCE_FIX.md  README.md  UX_TESTING_PLAN.md  build.dlangidews  build.dlangidews.wssettings  build.zig  build.zig.zon  core_test  core_test.c  create_test_data  create_test_data.c  design_doc.md  minimal_test  minimal_test.c  test_persistence_issue  test_persistence_issue.c  test_save_load  test_save_load.c  test_ui_integration.c  ux_mockup.html
desktop/: CMakeLists.txt  main.c
embedded/: Makefile.audio_test  Makefile.enhanced  Makefile.minimal  Makefile.sim  README.md  README_SIMPLE.md  audio_action_recorder.c  audio_action_recorder.h  audio_combo_example.c  audio_demo.sh  clay_epaper_renderer.c  clay_epaper_renderer.h  combo_counter_gcc_nrf52.ld  combocounter_enhanced  combocounter_sim  complete_combo_system.c  custom_labels_demo.sh  database_demo.sh  enhanced_simulation.c  epaper_display.h  epaper_hardware_nrf52840.c  final_demo.sh  fitness_core.c  fitness_core.h  interactive_demo.sh  minimal_main.c  musicmaker_integration.c  musicmaker_integration.h  nrf52840_main.c  nrf52840_main_complete.c  sdk_config.h  simple_combo_core.c  simple_combo_core.h  simple_combo_meter_example.c  simple_main.c  simulation_main.c  temp_input.txt  test_audio_recorder.c  test_custom_counters.sh  test_custom_labels.sh  (+2 more)
src/: app_core.zig  app_ui.zig  break_activities.c  break_activities.h  break_menu.c  clay_impl.c  clay_impl.h  clay_renderer_raylib.c  clay_renderer_raylib.h  clay_types.h  colors.c  colors.h  common.h  core.c  core.h  example.c  forms.c  forms.h  input.c  input.h  main.c  main.zig  objectives.c  raylib.zig  timer.c  timer.h  ui.c  ui.h  ui_impl.c  ui_impl.h  ui_init.c  ui_types.h  widgets.c  widgets.h
stash/: action_cam.h  combo_actioncam_integration.h
